Fix change estruture users CRUD and edit views profile/editprofile

--- a/site_ViveBio/public/css/user.css
+++ b/site_ViveBio/public/css/user.css
@@ -6,10 +6,29 @@
     width: 150px;
 }
 
+.user__info {
+    padding: 20px 0;
+}
+
+.user__dats {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.user_dats-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
 .user__container {
     width: 300px;
     padding: 20px;
-    margin: 85px auto 85px auto ;
+    margin: 85px auto 85px auto;
     box-shadow: 5px 5px 10px rgb(161, 206, 152);
     border-radius: 5px;
     background-color: rgba(255, 255, 255, .15);
@@ -17,52 +36,58 @@
     border: 1px solid var(--verdeFuerte);
 }
 
-.user__perfil{
+.user__perfil {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
     width: 100%;
 }
 
-.user__perfil .user__head{
+.user__perfil .user__head {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    width: 80%;
+    width: 100%;
 }
 
-.user h3{
+.user h3 {
     color: var(--VioletaOscuro);
 }
 
-.user__names{
+.user__names {
     width: 45%;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
 }
 
-.user__img{
+.user__img {
     width: 100px;
+    height: 100px;
+    display: flex;
 }
 
-.user__img img{
+.user__img img {
     width: 100%;
-    border-radius: 35px;
+    border-radius: 50%;
 }
 
-.user__options{
+.user__options {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    
+    padding: 20px 0;
+    width: 100%;
+
 }
 
-.user__options a{
+.user__options a {
     padding: 5px;
 }
 
-.user__options a{
+.user__options a {
     background-color: #7FA794;
     text-align: center;
     width: 110px;
@@ -75,43 +100,66 @@
 }
 
 
-.user h1{
+.user h1 {
     text-shadow: none;
     color: black;
 }
 
-.user__historial{
+.user__historial {
     text-align: center;
 }
 
 @media (min-width: 425px) {
+    .user .user__historial {
+        margin-top: 20px;
+    }
 
+    .user .user__head {
+        justify-content: space-around;
+    }
 
-
-    .user .user__dats{
+    .user .user__dats {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+        padding: 0 20px;
+
     }
 
-    .user .user__info{
+    .user .user__info {
         display: flex;
-        flex-direction: column;
-        margin-bottom: 10px;
+        flex-direction: row;
         width: 100%;
-        margin: 15px 0 15px;
+        text-align: start;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .user .user__info h3 {
+        width: 30%;
+        text-align: start;
+    }
+
+    .user .user__info-title {
+        padding: 20px;
+    }
+
+    .user .user__info h4 {
+        width: 70%;
+        text-align: start;
     }
 
     .user .user__container {
-        width: 90%;
+        width: 70%;
+        min-width: 400px;
         margin-top: 25px;
     }
 
     .user .logo__user img {
-    width: 150px;
+        width: 150px;
     }
 
-    .user .user__img{
+    .user .user__img {
         width: 100px;
     }
 
@@ -128,34 +176,64 @@
     }
 }
 
-@media(min-width: 645px){
+@media(min-width: 645px) {
 
-    .user .user__names{
-        width: 70%;
+    .user .user__names {
+        width: auto;
+        text-align: center;
+        padding: .5rem;
     }
 
-    .user .user__perfil{
+    .user .user__perfil {
         display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
+        width: 25%;
+        border-right: 1px solid var(--verdeFuerte);
+    }
+
+    .user .user__dats-container {
+        flex-direction: column;
+        width: 75%;
+    }
+
+    .user .user__head {
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+    }
+
+    .user .user__options {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .user .user__options a {
+        margin: 10px 0;
+        padding: auto;
+    }
+
+    .user .user__dats {
+        flex-direction: column;
+        width: 100%;
+        justify-content: flex-start;
+    }
+
+    .user .user__info {
         width: 100%;
     }
 
-    .user .user__options{
-        flex-direction: column;
-    }
-
-    .user .user__dats{
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-
-    .user .user__info{
-        width: 50%;
-    }
-
     .user .user__container {
-        width: 630px;
-        height: calc(100vh-130px);
+        display: flex;
+        flex-direction: row;
+        min-width: 600px;
+        max-width: 800px;
+        padding: 0;
+    }
+
+    .user .user__historial {
+        width: 100%;
+
     }
 }
