--- a/site_ViveBio/src/views/users/login.ejs
+++ b/site_ViveBio/src/views/users/login.ejs
@@ -45,7 +45,7 @@
                         <form method="POST">
                             <article>
                                 <div class="login_form-box">
-                                    <label for="usernaame">Usuario</label>
+                                    <label for="username">Usuario</label>
                                     <input class="login_form-input" type="text" id="username" name="username"
                                         placeholder="Ingresa usuario"
                                         value="">
