--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -66,7 +66,7 @@
                     <a href="/"><img src="/images/logo.png" alt="logo"></a>
                 </div>
                 <form class="header__busqueda" action="/products/search" method="GET">
-                    <input type="text" name="keyboard" id="keyboard" class="barra" style="padding-left:5px;">
+                    <input type="text" name="keyword" id="keyword" class="barra" style="padding-left:5px;">
                     <button type="submit" class="barra__lupa"><i class="fas fa-search"></i></button>
                 </form>
                 <div class="header__user">
