--- a/site_ViveBio/src/views/products/card.ejs
+++ b/site_ViveBio/src/views/products/card.ejs
@@ -1,87 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('../partials/head', { title : "Detalle de Producto" }) %>
+<%- include('../partials/head', { title : "Detalle del Producto" }) %>
 
   <body class="productCard">
     <%- include('../partials/header') %>
       <main>
-        <div class="producto__texto">
-          <div class="container-imagen-texto">
-            <div class="producto__imagen">
-              <div class="box-imagen">
-                <img src="/images/<%= product.image[0] %>" alt="...">
-              </div>
-              <div class="box-info">
-                <div class="box-info-precio">
-                  <h2>
-                    <span> $ </span>
-                    <% if (product.discount) { %>
-                      <%= toThousand(product.price - (product.price * product.discount / 100)) %>
-                        <% }else{ %>
-                          <%= toThousand(product.price) %>
-                            <% } %>
-                  </h2>
-                </div>
-              </div>
-            </div>
-            <div class="box-texto-iconos">
+        <section class="primer_contenedor">
 
-              <h1>
-                <%= product.name %>
-              </h1>
-              <p>
-                <h5>-<%= product.property %>-</h5>
-                <%= product.description %>
-              </p>
-              <div class="producto__cart">
-                <div class="info-precio">
-                  <h4>Precio pago en efectivo: $
+          <div class="container-card">
+              <div class="box-imagen">
+                <% product.images.forEach(image => { %>
+                  <% if (image.primary) { %>
+                    <img src="/images/products/<%= image.name%>" alt="imagen del producto">
+                  <% } %>
+                <% }) %>
+              </div>
+            <div class="box-texto-iconos">
+              <h1> <%= product.name %>  </h1>
+              <span>-<%= product.property %>-</span>
+              <p>Precio pago en efectivo: $
                     <% if (product.discount) { %>
                       <%= toThousand(product.price - (product.price * product.discount / 100)) %>
                         <% }else{ %>
                           <%= toThousand(product.price) %>
-                            <% } %> .-
-                  </h4>
-                  <h5>Promoción: <%= product.discount %> % off (* Hasta agotar stock)</h5>
-                  <h6>Peso: <%= product.volume %> grs.</h6>
-                </div>
+                    <% } %> .
+                     Promoción: <%= product.discount %> % off (* Hasta agotar stock).
+                     Peso: <%= product.volume %> grs.
+              </p>
                 <div class="producto-iconos">
-                  <% if (locals.userLogin) { %>
-                    <% if (userLogin.category==="admin" ) { %>
-                      <form action="/Products/remove/<%= product.id %>?_method=DELETE" method="POST">
+                    <% if (locals.userLogin) { %>
+                      <% if (userLogin.category==="admin" ) { %>
+                        <form action="/Products/remove/<%= product.id %>?_method=DELETE" method="POST">
                         <button type="submit" title="Eliminar producto"><i class="fa-solid fa-trash-can"></i></button>
-                      </form>
-                      <a href="/Products/Edit/<%= product.id %>" title="Editar producto"><i
-                          class="fa-solid fa-pen"></i></a>
+                        </form>
+                        <a href="/Products/edit/<%= product.id %>" title="Editar producto"><i
+                        class="fa-solid fa-pen"></i></a>
                       <% } %>
-                        <% } %>
-                          <a href="/productCarrito.html" title="Agregar producto al carrito"><i
-                              class="fa-solid fa-cart-shopping"></i></a>
-                          <a href="#" title="Añadir a favoritos"><i class="fa-solid fa-star"></i></a>
-                          <a href="#" title="Compartir enlace"><i class="fa-solid fa-share-nodes"></i></a>
+                    <% } %>
+                        <a href="/Products/card" title="Agregar producto al carrito"><i
+                        class="fa-solid fa-cart-shopping"></i></a>
+                        <a href="#"><i class="fa-regular fa-heart" title="Favoritos"></i></a>
+                        <a href="#" title="Compartir enlace"><i class="fa-solid fa-share-nodes"></i></a>
                 </div>
               </div>
+              <p><%= product.description %></p> 
             </div>
-          </div>
+          
           <h2 class="titulares">Productos Relacionados</h2>
           <section class="row">
-
-            <% relation.forEach(({id,image,name,discount,property,price})=> { %>
+            <% relacionados.forEach(({id,images,name,discount,property,price})=> { %>
               <article>
                 <div class="card estilo-c">
                   <div class="img-container">
-                    <img src="/images/<%= image %> " alt="producto">
+                    <% images.forEach(image => { %>
+                      <% if (image.primary) { %>
+                        <img src="/images/products/<%= images.name%>" alt="imagen del producto">
+                      <% } %>
+                    <% }) %>
                     <span class="promo">
                       <%= discount %>% off
                     </span>
                   </div>
                   <div class="info-container">
                     <div class="Card-info-texto">
-                      <a href="/products/Card/<%= id %> ">
-                        <h2>
-                          <%= name %>
-                        </h2>
+                      <a href="/products/card/<%= id %> ">
+                        <h2><%= name %></h2>
                       </a>
                       <span>-<%= property %> -</span>
                       <p>$
@@ -89,22 +73,20 @@
                           <%= toThousand(price - (price * discount / 100)) %>
                             <% }else{ %>
                               <%= toThousand(price) %>
-                                <% } %>
+                          <% } %>
                       </p>
                     </div>
                     <div class="card-c-iconos">
-                      <div class="iconos-white">
+                      <div class="producto-iconos">
                         <% if (locals.userLogin) { %>
                           <% if (userLogin.category==="admin" ) { %>
-                            <a href="/products/Edit/<%= id %> " title="Editar producto"><i
+                            <a href="/products/edit/<%= id %> " title="Editar producto"><i
                                 class="fa-solid fa-pen"></i></a>
                             <% } %>
                               <% } %>
-                                <a href="/products/Card/<%= id %> " title="Ver producto"><i
-                                    class="fa-solid fa-eye"></i></a>
-                                <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
-                                <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
-                                <a href="#"><i class="fa-solid fa-star"></i></a>
+                              <a href="/products/cart/<%= id %> " title="Agregar producto al carrito"><i
+                                class="fa-solid fa-cart-shopping"></i></a>                                <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                                <a href="#"><i class="fa-regular fa-heart" title="Favoritos"></i></a>
                       </div>
                     </div>
                   </div>
@@ -158,6 +140,11 @@
                 </div>
               </div>
             </div>
+            <div class="videos">
+            <video autoplay loop muted width="200" height="200"
+            src="https://v.pinimg.com/videos/mc/expMp4/12/33/c9/1233c90805745925f1cd114692e46589_t4.mp4"></video>
+              
+            </div>
             <div class="iconos-eco">
               <img src="/images/icono1.jpg" alt="">
               <img src="/images/icono2.jpg" alt="">
@@ -165,6 +152,8 @@
               <img src="/images/icono4.jpg" alt="">
             </div>
           </section>
+      
+        </section>
       </main>
       <%- include('../partials/footer') %>
         <script src="/javascript/menuMobile.js"></script>
